--- a/maven-mda-plugin/pom.xml
+++ b/maven-mda-plugin/pom.xml
@@ -15,7 +15,7 @@
 	<artifactId>mda-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<name>Maven MDA Plugin</name>
-	<version>2.0.19-SNAPSHOT</version>
+	<version>2.0.20-SNAPSHOT</version>
 	<parent>
 		<groupId>com.soffid</groupId>
 		<artifactId>template</artifactId>
@@ -25,10 +25,7 @@
 		<maven>2.0.9</maven>
 	</prerequisites>
 	<scm>
-		<connection>scm:git:ssh://git@stash.dev.lab:7999/IAM/support.git</connection>
-		<developerConnection>scm:git:ssh://git@stash.dev.lab:7999/IAM/support.git</developerConnection>
-		<url>scm:git:ssh://git@stash.dev.lab:7999/IAM/support.git</url>
-		<tag>mda-maven-plugin-2.0.5</tag>
+		<url>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</url>
 	</scm>
 
 
@@ -85,7 +82,7 @@
 		<dependency>
 			<groupId>com.soffid.tools</groupId>
 			<artifactId>mdagenerator</artifactId>
-			<version>2.0.20-SNAPSHOT</version>
+			<version>2.0.21-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
