--- a/maven-mda-plugin/pom.xml
+++ b/maven-mda-plugin/pom.xml
@@ -15,7 +15,7 @@
 	<artifactId>mda-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<name>Maven MDA Plugin</name>
-	<version>2.0.20</version>
+	<version>2.0.20-SNAPSHOT</version>
 	<parent>
 		<groupId>com.soffid</groupId>
 		<artifactId>template</artifactId>
@@ -26,8 +26,7 @@
 	</prerequisites>
 	<scm>
 		<connection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</connection>
-	  <tag>mda-maven-plugin-2.0.20</tag>
-  </scm>
+	</scm>
 
 
 	<dependencies>
@@ -76,7 +75,7 @@
 		<dependency>
 			<groupId>com.soffid.tools</groupId>
 			<artifactId>mdagenerator</artifactId>
-			<version>2.0.20</version>
+			<version>2.0.20-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
@@ -97,16 +96,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.3.1</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.scm</groupId>
-				<artifactId>maven-scm-provider-git</artifactId>
-				<version>1.7</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.scm</groupId>
-				<artifactId>maven-scm-provider-gitexe</artifactId>
-				<version>1.7</version>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
