--- a/maven-mda-plugin/pom.xml
+++ b/maven-mda-plugin/pom.xml
@@ -66,7 +66,7 @@
 		<dependency>
 			<groupId>com.soffid.tools</groupId>
 			<artifactId>mdagenerator</artifactId>
-			<version>2.0.21</version>
+			<version>2.0.22-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
