--- a/dbtools/pom.xml
+++ b/dbtools/pom.xml
@@ -15,6 +15,13 @@
                 <developerConnection>scm:git:ssh://git@stash.dev.lab:7999/IAM/console.git</developerConnection>
                 <tag>dbtools-1.14</tag>
         </scm>
+        <licenses>
+          <license>
+            <name>GNU GPL Version 3.0</name>
+            <url>http://www.gnu.org/licenses/gpl.html</url>
+          </license>
+        </licenses>
+
 <build>
 <plugins>
 	<plugin>
