--- a/maven-mda-plugin/pom.xml
+++ b/maven-mda-plugin/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>mda-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<name>Maven MDA Plugin</name>
-	<version>2.0.34-SNAPSHOT</version>
+	<version>2.0.34</version>
 	<parent>
 		<groupId>com.soffid</groupId>
 		<artifactId>template</artifactId>
@@ -16,7 +16,7 @@
 	</prerequisites>
 	<scm>
 		<connection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</connection>
-    <tag>HEAD</tag>
+    <tag>mda-maven-plugin-2.0.34</tag>
   </scm>
 
 
@@ -66,7 +66,7 @@
 		<dependency>
 			<groupId>com.soffid.tools</groupId>
 			<artifactId>mdagenerator</artifactId>
-			<version>2.0.34-SNAPSHOT</version>
+			<version>2.0.34</version>
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.plexus</groupId>
