--- a/dbtools/pom.xml
+++ b/dbtools/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.soffid</groupId>
@@ -10,30 +12,30 @@
 	<version>1.17-SNAPSHOT</version>
 	<name>Soffid DB Tools</name>
 	<description>Tools to extract, create or modify a DB Schema</description>
-        <scm>   
-                <connection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</connection>
-                <developerConnection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</developerConnection>
-                <tag>HEAD</tag>
-        </scm>
-        <licenses>
-          <license>
-            <name>GNU GPL Version 3.0</name>
-            <url>http://www.gnu.org/licenses/gpl.html</url>
-          </license>
-        </licenses>
+	<scm>
+		<connection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+	<licenses>
+		<license>
+			<name>GNU GPL Version 3.0</name>
+			<url>http://www.gnu.org/licenses/gpl.html</url>
+		</license>
+	</licenses>
 
-<build>
-<plugins>
-	<plugin>
-                                <groupId>org.apache.maven.plugins</groupId>
-                                <artifactId>maven-compiler-plugin</artifactId>
-                                <configuration>
-                                        <source>1.5</source>
-                                        <target>1.5</target>
-                                </configuration>
-                        </plugin>
-</plugins>
-</build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -59,6 +61,12 @@
 			<version>10.2.0.4.0</version>
 			<classifier>noseal</classifier>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.5.jre7</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
