--- a/dbtools/pom.xml
+++ b/dbtools/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.soffid</groupId>
@@ -9,13 +7,13 @@
 	</parent>
 	<groupId>com.soffid.iam.console</groupId>
 	<artifactId>dbtools</artifactId>
-	<version>1.17-SNAPSHOT</version>
+	<version>1.17</version>
 	<name>Soffid DB Tools</name>
 	<description>Tools to extract, create or modify a DB Schema</description>
 	<scm>
 		<connection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:/SoffidIAM/tools.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>dbtools-1.17</tag>
 	</scm>
 	<licenses>
 		<license>
