--- a/mdagenerator/pom.xml
+++ b/mdagenerator/pom.xml
@@ -51,9 +51,9 @@
 				    </argLine>
 				</configuration>
 			</plugin>
-
-	    <plugin>
-	      <artifactId>maven-release-plugin</artifactId>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
 	      <version>2.4.2</version>
 	      <dependencies>
 	        <dependency>
@@ -62,7 +62,11 @@
 	          <version>1.8.1</version>
 	        </dependency>
 	       </dependencies>
-	      </plugin>
+        <configuration>
+          <preparationGoals>clean install integration-test</preparationGoals>
+          <goals>clean install deploy</goals>
+        </configuration>
+      </plugin>
 	    </plugins>
 	</build>
 
