--- a/maven-mda-plugin/pom.xml
+++ b/maven-mda-plugin/pom.xml
@@ -1,13 +1,11 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.soffid.tools</groupId>
 	<artifactId>mda-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<name>Maven MDA Plugin</name>
-	<version>2.1.3-SNAPSHOT</version>
+	<version>2.1.4-SNAPSHOT</version>
 	<prerequisites>
 		<maven>2.0.9</maven>
 	</prerequisites>
@@ -37,7 +35,7 @@
 		<dependency>
 			<groupId>com.soffid.tools</groupId>
 			<artifactId>mdagenerator</artifactId>
-			<version>2.1.3-SNAPSHOT</version>
+			<version>2.1.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.maven</groupId>
@@ -65,7 +63,7 @@
 		        <configuration>
   				  <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
   		          <mojoDependencies>
-  		          	<mojoDepnedency></mojoDepnedency>
+  		          	<mojoDepnedency />
 		          </mojoDependencies>
 		        </configuration>
 		        <executions>
@@ -89,14 +87,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-	      <version>2.4.2</version>
-	      <dependencies>
-	        <dependency>
-	          <groupId>org.apache.maven.scm</groupId>
-	          <artifactId>maven-scm-provider-gitexe</artifactId>
-	          <version>1.8.1</version>
-	        </dependency>
-	       </dependencies>
+	      <version>2.5.3</version>
         <configuration>
           <preparationGoals>clean install integration-test</preparationGoals>
           <goals>clean install deploy</goals>
