--- a/mdagenerator/pom.xml
+++ b/mdagenerator/pom.xml
@@ -21,6 +21,26 @@
 
 	<build>
 		<plugins>
+      <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-plugin-plugin</artifactId>
+		        <version>3.7.1</version>
+		        <configuration>
+  				  <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+  		          <mojoDependencies>
+  		          	<mojoDepnedency />
+		          </mojoDependencies>
+		        </configuration>
+		        <executions>
+		          <!-- if you want to generate help goal -->
+		          <execution>
+		            <id>help-goal</id>
+		            <goals>
+		              <goal>helpmojo</goal>
+		            </goals>
+		          </execution>
+		        </executions>
+		      </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
