--- a/dbtools/pom.xml
+++ b/dbtools/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.soffid.iam.console</groupId>
 	<artifactId>dbtools</artifactId>
-	<version>1.18-SNAPSHOT</version>
+	<version>1.18</version>
 	<name>Soffid DB Tools</name>
 	<description>Tools to extract, create or modify a DB Schema</description>
 	<scm>
