--- a/mdagenerator/pom.xml
+++ b/mdagenerator/pom.xml
@@ -1,5 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.soffid.tools</groupId>
 	<artifactId>mdagenerator</artifactId>
@@ -15,32 +17,32 @@
 	</prerequisites>
 	<scm>
 		<connection>scm:git:ssh://git@github.com/SoffidIAM/tools.git</connection>
-    <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 
 
 	<build>
 		<plugins>
-      <plugin>
-		        <groupId>org.apache.maven.plugins</groupId>
-		        <artifactId>maven-plugin-plugin</artifactId>
-		        <version>3.7.1</version>
-		        <configuration>
-  				  <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
-  		          <mojoDependencies>
-  		          	<mojoDepnedency />
-		          </mojoDependencies>
-		        </configuration>
-		        <executions>
-		          <!-- if you want to generate help goal -->
-		          <execution>
-		            <id>help-goal</id>
-		            <goals>
-		              <goal>helpmojo</goal>
-		            </goals>
-		          </execution>
-		        </executions>
-		      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.7.1</version>
+				<configuration>
+					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+					<mojoDependencies>
+						<mojoDepnedency />
+					</mojoDependencies>
+				</configuration>
+				<executions>
+					<!-- if you want to generate help goal -->
+					<execution>
+						<id>help-goal</id>
+						<goals>
+							<goal>helpmojo</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -48,7 +50,7 @@
 					<source>11</source>
 					<target>11</target>
 					<compilerArgs>
-					    <arg>--add-modules=java.sql</arg>
+						<arg>--add-modules=java.sql</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
@@ -66,21 +68,21 @@
 					<excludes>
 						<exclude>**/*IntegrationTest.java</exclude>
 					</excludes>
-				    <argLine>
-				        --add-modules java.sql
-				    </argLine>
+					<argLine>
+						--add-modules java.sql
+					</argLine>
 				</configuration>
 			</plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-	      <version>2.5.3</version>
-        <configuration>
-          <preparationGoals>clean install integration-test</preparationGoals>
-          <goals>clean install deploy</goals>
-        </configuration>
-      </plugin>
-	    </plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<preparationGoals>clean install integration-test</preparationGoals>
+					<goals>clean install deploy</goals>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 	<pluginRepositories>
@@ -99,19 +101,19 @@
 			<url>https://download.soffid.com/maven</url>
 		</repository>
 	</repositories>
-  <distributionManagement>
-    <repository>
-      <uniqueVersion>true</uniqueVersion>
-      <id>soffid-open</id>
-      <name>Soffid Maven repository</name>
-      <url>${soffid.deploy.url}</url>
-    </repository>
-    <site>
-      <id>soffid-open-site</id>
-      <name>Soffid Maven site repository</name>
-      <url>${soffid.deploy.site.url}</url>
-    </site>
-  </distributionManagement>
+	<distributionManagement>
+		<repository>
+			<uniqueVersion>true</uniqueVersion>
+			<id>soffid-open</id>
+			<name>Soffid Maven repository</name>
+			<url>${soffid.deploy.url}</url>
+		</repository>
+		<site>
+			<id>soffid-open-site</id>
+			<name>Soffid Maven site repository</name>
+			<url>${soffid.deploy.site.url}</url>
+		</site>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
